configpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - image: mysql
      name: mycont
      ports:
        - containerPort: 3306
