daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mypod
  labels:
    app: daemon-set
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - image: nginx
          name: mycont
          ports:
           - containerPort: 80
