manifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: myngpod
  labels:
    env: testing
spec:
  containers:
   - image: nginx
     ports:
      - containerPort: 80
     name: mynginx
     livenessProbe:
        httpGet:
           - path: /index.html
        intialDelaySecond: 10
        failureThreshold: 3
        periodSeconds: 10
