pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod1
  labels:
    app: dev
spec:
   containers:
     - image: nginx
       name: mycont
       ports:
        - containerPort: 80
       volumeMounts:
         - name: my-volume
           mountPath: /mnt/data
   volumes:
      - name: my-volume
        persistentVolumeClaim:
           claimName: mypvc1
