stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mydp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - image: nginx
          name: mycont
          ports:
           - containerPort: 80
