nodeport.yml
apiVersion: v1
kind: Service
metadata:
   name: myservice
spec:
   type: NodePort
   ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
   selector:
      app: dev
